--- a/src/Intersvyaz.Core/Intersvyaz.Core.csproj
+++ b/src/Intersvyaz.Core/Intersvyaz.Core.csproj
@@ -123,7 +123,9 @@
     <Compile Include="Models\SessionData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ISessionService.cs" />
+    <Compile Include="Services\ISettingsService.cs" />
     <Compile Include="Services\SessionService.cs" />
+    <Compile Include="Services\SettingsService.cs" />
     <EmbeddedResource Include="Properties\Intersvyaz.Core.rd.xml" />
   </ItemGroup>
   <ItemGroup>
